--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: "3"
 services:
   sample_service:
-    container_name: app
-    image: ./Docker/Dockerfile
+    container_name: bot
+    build:
+      context: .
+      dockerfile: ./Docker/Dockerfile
     tty: true
     # secret in /run/secrets/discord_secret.json
     secrets:
       - discord_secret
     volumes:
       - ./src:/app
-    command: python /app/main.py
+    command: [ "python", "src/main.py" ]
 
 secrets:
   discord_secret:
