--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "discordpy-template"
 version = "0.1.0"
 description = ""
-authors = ["t4t5u0"]
+authors = ["t4t5u0 <48282855+t4t5u0@users.noreply.github.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
