Update: venvをコピーする方針にして，Gitリポジトリから直接ライブラリを入れても動くように

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,12 +1,17 @@
 FROM python:3.10-slim as builder
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 RUN pip install poetry
 
 COPY pyproject.toml poetry.lock ./
 
-RUN poetry export -f requirements.txt > requirements.txt
+
+# RUN poetry export -f requirements.txt > requirements.txt
+
+RUN apt-get update && apt-get install -y git
+RUN poetry config virtualenvs.in-project true && \
+    poetry install --no-dev --no-interaction
 
 FROM python:3.10-slim
 
@@ -14,8 +19,10 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /usr/src/app
 
-COPY --from=builder /usr/src/app/requirements.txt .
+# COPY --from=builder /usr/src/app/requirements.txt .
 
-RUN pip install -r requirements.txt
+# RUN pip install -r requirements.txt
 
-COPY . .
+# COPY . .
+COPY --from=builder /app/.venv /app/.venv
+COPY src /app/src
