Update: 正しくDockerで起動できるようにした

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,28 +1,21 @@
-FROM python:3.10-slim as builder
+ARG PYTHON_ENV=python:3.10-slim 
+
+FROM $PYTHON_ENV as builder
+
+RUN apt-get update && apt-get install -y git
+RUN pip install --upgrade pip && pip install poetry
 
 WORKDIR /app
 
-RUN pip install poetry
-
 COPY pyproject.toml poetry.lock ./
-
-
-# RUN poetry export -f requirements.txt > requirements.txt
-
-RUN apt-get update && apt-get install -y git
 RUN poetry config virtualenvs.in-project true && \
     poetry install --no-dev --no-interaction
 
-FROM python:3.10-slim
 
-ENV PYTHONUNBUFFERED=1
+FROM $PYTHON_ENV as prod
 
-WORKDIR /usr/src/app
 
-# COPY --from=builder /usr/src/app/requirements.txt .
+COPY --from=builder /app/.venv .venv
 
-# RUN pip install -r requirements.txt
-
-# COPY . .
-COPY --from=builder /app/.venv /app/.venv
-COPY src /app/src
+WORKDIR /app
+COPY src .
